# azure-blob-backup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  config.template.yaml  crontab  docker-compose.override.template.yml  docker-compose.override.yml  docker-compose.yml  run_backup.sh
.github/workflows/: build.yml  release.yml
src/: backup.rs  config.rs  main.rs
