[package]
name = "azure_blob_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
azure_core = "0.8.0"
azure_storage = "0.9.0"
azure_storage_blobs = "0.9.0"
futures = "0.3.25"
log = "0.4.17"
simple_logger = "4.0.0"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
walkdir = "2.3.2"
yaml-rust = "0.4.5"
